--- a/pages/signup.html
+++ b/pages/signup.html
@@ -3,7 +3,7 @@
   <head>
     <title>Sculpt Gym</title>
         <meta  charset="utf-8"name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="../favicon.ico" type="../image/gif" sizes="16x16">
+        <link rel="icon" href="../favicon.ico" type="image/gif" sizes="16x16">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -13,6 +13,7 @@
         <style>
         html,body {
             background-color: rgb(110, 109, 109);
+            width:100%;
         }
             @media only screen and (max-width:620px) {
                 /* For mobile phones: */
@@ -80,24 +81,36 @@
      <!--This is the sign up form which is going to be on the right side of the container
         - this will have the be connected to the database
         -this on has to work with the login form    -->
-        <div id="Signup">
-          <h2>Sign up</h2>
-          <form action="signup.php" method="post">
-            <div class="sign-left">
-              <label><b>Email</b></label>
-              <input type="email-text" placeholder="Example: username@gmail.com" name="email" required>
-              <label><b>Password</b></label>
-              <input type="password-text" placeholder="Enter Password" name="pasw" required>
-              <label><b>Repeat Password</b></label>
-              <input type="pswd-repeat-text" placeholder="Repeat Password" name="pswd-repeat" required
-                <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-					    <div class="signin-button">
-                <button type="button" class="cancel-button-signup">Cancel</button>
-							  <button type="submit" class="signup-button">Sign Up</button>
-						</div>
-				</div>
-			</form>
-       </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+             <div class="row myborder">
+                 <h4 style="color: #7EB59E; margin: initial; margin-bottom: 10px;">Sign Up Now</h4><hr>
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user mycolor"></i></span>
+                    <input size="60" maxlength="255" class="form-control" placeholder="User Name" name="UserRegistration[username]" id="UserRegistration_username" type="text">                                                        </div>
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock mycolor"></i></span>
+                    <input size="60" maxlength="255" class="form-control" placeholder="Password" name="UserRegistration[password]" id="UserRegistration_password" type="password">                                    </div>
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user mycolor"></i></span>
+                    <input size="60" maxlength="255" class="form-control" placeholder="First Name" name="UserRegistration[fname]" id="UserRegistration_fname" type="text">                                    </div>
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user mycolor"></i></span>
+                    <input size="60" maxlength="255" class="form-control" placeholder="Last Name" name="UserRegistration[lname]" id="UserRegistration_lname" type="text">                                    </div>
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope mycolor"></i></span>
+                    <input size="60" maxlength="255" class="form-control" placeholder="Address" name="UserRegistration[address]" id="UserRegistration_address" type="text">                                    </div>
+                <div class="input-group margin-bottom-20">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-phone mycolor"></i></span>
+                    <input size="60" maxlength="255" class="form-control" placeholder="Contact Number" name="UserRegistration[contactnumber]" id="UserRegistration_contactnumber" type="text">                                    </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button class="btn-u pull-left" type="submit">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
     </div>
     <footer class="container-fluid text-center">
       <p id="copyright-footer" style="text-align:center;">Copyright&copy; Linner Rivas</p>
